--- a/src/main/resources/static/css/order/order.css
+++ b/src/main/resources/static/css/order/order.css
@@ -1,7 +1,7 @@
 /* 🍞 기본 배경 및 폰트 */
 body {
     font-family: 'Noto Sans KR', sans-serif;
-    background: #fff4eb;
+    background: whitesmoke;
     color: #3b2a1a;
     margin: 0;
     padding: 0;
