--- a/src/main/resources/templates/menu/menuEdit.html
+++ b/src/main/resources/templates/menu/menuEdit.html
@@ -148,7 +148,7 @@
 
     <div class="form-actions">
         <button type="button" id="updateBtn">수정하기</button>
-        <button type="button" onclick="location.href='/menus/list'">목록으로</button>
+        <button type="button" onclick="location.href='/menus/list'" id="goList">목록으로</button>
     </div>
 
 </form>
