--- a/src/main/resources/templates/menu/sideEdit.html
+++ b/src/main/resources/templates/menu/sideEdit.html
@@ -55,7 +55,7 @@
 
         <div class="form-actions">
             <button type="button" id="updateBtn">수정하기</button>
-            <button type="button" onclick="location.href='/sides/list'">목록으로</button>
+            <button type="button" onclick="location.href='/sides/list'" id="goList">목록으로</button>
         </div>
     </form>
 </div>
