--- a/src/main/resources/templates/menu/sideList.html
+++ b/src/main/resources/templates/menu/sideList.html
@@ -14,6 +14,7 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
+<div class="container">
 <h1>사이드 목록</h1>
 <table>
     <thead>
@@ -48,6 +49,7 @@
 <br>
 <button onclick="location.href='/sides/admin'">새 사이드 등록</button>
 <button onclick="location.href='/admin'" style="margin-left: 10px;">메인으로 가기</button>
+</div>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
