--- a/src/main/resources/templates/store/store-order-list.html
+++ b/src/main/resources/templates/store/store-order-list.html
@@ -23,7 +23,7 @@
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
 <div class="container">
-    <div class="header">
+    <div class="header-store">
         <h1 id="welcome-message">
             <span id="welcome-text">지점 주문 목록</span>
             <span id="order-count">(0)</span>
