--- a/src/main/resources/templates/menu/breadList.html
+++ b/src/main/resources/templates/menu/breadList.html
@@ -13,30 +13,32 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
-<h1>빵 목록</h1>
+<div class="container">
+    <h1>빵 목록</h1>
 
-<table>
-    <thead>
-    <tr>
+    <table>
+        <thead>
+        <tr>
 
-        <th>이름</th>
-        <th>칼로리</th>
-        <th>가격</th>
-        <th>이미지</th>
-        <th>상태</th>
-        <th>수정 / 삭제</th>
+            <th>이름</th>
+            <th>칼로리</th>
+            <th>가격</th>
+            <th>이미지</th>
+            <th>상태</th>
+            <th>수정 / 삭제</th>
 
 
-    </tr>
-    </thead>
-    <tbody id="breadTableBody">
-    <!-- ✅ JS에서 렌더링할 예정 -->
-    </tbody>
-</table>
+        </tr>
+        </thead>
+        <tbody id="breadTableBody">
+        <!-- ✅ JS에서 렌더링할 예정 -->
+        </tbody>
+    </table>
 
-<br>
-<button onclick="location.href='/breads/admin'">새 빵 등록</button>
-<button onclick="location.href='/admin'" style="margin-left: 10px;">메인으로 가기</button>
+    <br>
+    <button onclick="location.href='/breads/admin'">새 빵 등록</button>
+    <button onclick="location.href='/admin'" style="margin-left: 10px;">메인으로 가기</button>
+</div>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
