--- a/src/main/resources/templates/store/store-detail.html
+++ b/src/main/resources/templates/store/store-detail.html
@@ -23,23 +23,23 @@
         <input type="hidden" id="store_latitude" >
         <input type="hidden" id="store_longitude" >
 
-        <div>
+        <div class="form-group">
             <label>지점명:</label>
             <input type="text" id="store_name" required>
         </div>
-        <div>
+        <div class="form-group">
             <label>지점관리자:</label>
             <input type="text" id="store_manager" required>
         </div>
-        <div>
+        <div class="form-group">
             <label>주소:</label>
             <input type="text" id="address" required>
         </div>
-        <div>
+        <div class="form-group">
             <label>우편번호:</label>
             <input type="text" id="postcode" required>
         </div>
-        <div>
+        <div class="form-group">
             <label>상태:</label>
             <select id="status">
                 <option value="ACTIVE">ACTIVE</option>
